update waitTask generate code